--- a/home.html
+++ b/home.html
@@ -16,14 +16,14 @@
   <div id="menu" class="left show">
     <div class="user">
       <img src="./img/logo.png" alt="APAMS" height="100px">
-      <h5>Bem vindo, Gabriel</h5>
+      <h5>Bem vindo,<br> Gabriel Oliveira Marcato!</h5>
     </div>
     <ul>
-      <li><i class="fas fa-home"></i>Home</li>
-      <li><i class="fas fa-th-list"></i>Postagens</li>
-      <li><i class="fas fa-bell"></i>Notificações</li>
-      <li><i class="fas fa-cog"></i>Configurações</li>
-      <li><i class="fas fa-sign-out-alt"></i>Sair</li>
+      <a href=""><li class="ativo"><i class="fas fa-home"></i>Home</li></a>
+      <a href=""><li><i class="fas fa-th-list"></i>Postagens</li></a>
+      <a href=""><li><i class="fas fa-bell"></i>Notificações</li></a>
+      <a href=""><li><i class="fas fa-cog"></i>Configurações</li></a>
+      <a href=""><li><i class="fas fa-sign-out-alt"></i>Sair</li></a>
     </ul>
     <a href="#" id="showmenu">
       <i class="fa fa-align-justify"></i>
