--- a/config.html
+++ b/config.html
@@ -277,6 +277,11 @@
               <input type="text" class="form-control celNum" name="celPatrocinio" id="celPatrocinio"
                 placeholder="(xx)xxxxx-xxxx">
             </div>
+            <div class="form-group col-md-6"></div>
+            <div class="form-group col-md-6">
+              <label>Imagem Patrocínio</label>
+              <input type="file" class="form-control-file" id="logoPatrocinio">
+            </div>
             <button type="submit" class="btn">Salvar</button>
           </form>
           <hr>
