--- a/config.html
+++ b/config.html
@@ -295,6 +295,7 @@
               <thead>
                 <tr>
                   <th scope="col">#ID</th>
+                  <th class="resp-table" scope="col"></th>
                   <th scope="col">Nome</th>
                   <th scope="col">E-mail</th>
                   <th scope="col">Contato</th>
@@ -305,6 +306,11 @@
               <tbody>
                 <tr>
                   <th scope="row">1</th>
+                  <td class="resp-table">
+                    <div class="avatar-list">
+                      <img src="./img/avatar.png" alt="Avatar" height="50px;">
+                    </div>
+                  </td>
                   <td>TopSapp</td>
                   <td>email@email.com.br</td>
                   <td>(99) 99999-9999</td>
