--- a/notificacoes.html
+++ b/notificacoes.html
@@ -113,6 +113,7 @@
           <thead>
             <tr>
               <th scope="col">#ID</th>
+              <th class="resp-table" scope="col"></th>
               <th scope="col">Titulo</th>
               <th scope="col">Patrocinador</th>
               <th scope="col">Status</th>
@@ -125,6 +126,11 @@
 
             <tr>
               <th scope="row">1</th>
+              <td class="resp-table">
+                <div class="avatar-list">
+                  <img src="./img/avatar.png" alt="Avatar" height="50px;">
+                </div>
+              </td>
               <td>TW LOVE PET</td>
               <td>TWSPEED TELECOM</td>
               <td>Ativo</td>
