--- a/postagens.html
+++ b/postagens.html
@@ -112,6 +112,7 @@
           <thead>
             <tr>
               <th scope="col">#ID</th>
+              <th class="resp-table" scope="col"></th>
               <th scope="col">Titulo</th>
               <th scope="col">Animal</th>
               <th scope="col">Status</th>
@@ -124,6 +125,11 @@
 
             <tr>
               <th scope="row">1</th>
+              <td class="resp-table">
+                <div class="avatar-list">
+                  <img src="./img/avatar.png" alt="Avatar" height="50px;">
+                </div>
+              </td>
               <td>Adote o cachorro surfista</td>
               <td>Thanos</td>
               <td>Ativo</td>
