--- a/notificacoes.html
+++ b/notificacoes.html
@@ -74,7 +74,7 @@
 
     <div class="article">
       <div class="title-tab">
-        <h2>Notificações</h2>
+        <h2>Notificação</h2>
       </div>
       <form action="" method="" class="row" id="notificacao">
         <div class="form-group col-md-12">
@@ -106,19 +106,17 @@
       <div class="table-responsive">
         <div class="title-list">
           <div>
-            <h2>Posts</h2>
+            <h2>Notificações</h2>
           </div>
         </div>
         <table class="display table text-center" id="listNot">
           <thead>
             <tr>
               <th scope="col">#ID</th>
-              <th class="resp-table" scope="col"></th>
               <th scope="col">Titulo</th>
               <th scope="col">Patrocinador</th>
               <th scope="col">Status</th>
               <th class="resp-table" scope="col">Descrição</th>
-              <th scope="col"></th>
               <th scope="col"></th>
             </tr>
           </thead>
@@ -126,17 +124,11 @@
 
             <tr>
               <th scope="row">1</th>
-              <td class="resp-table">
-                <div class="avatar-list">
-                  <img src="./img/avatar.png" alt="Avatar" height="50px;">
-                </div>
-              </td>
               <td>TW LOVE PET</td>
               <td>TWSPEED TELECOM</td>
               <td>Ativo</td>
               <td class="resp-table">Promoção LOVE PET, instalação de internet gratis durante esta semana!</td>
-              <td><i class="fas fa-edit" data-toggle="modal" data-target="#editarNot" title="Editar"></i></td>
-              <td><i class="fas fa-trash-alt" data-toggle="modal" data-target="#removerPost" title="Remover"></i>
+              <td><i class="fas fa-trash-alt" data-toggle="modal" data-target="#removerNot" title="Remover"></i>
               </td>
             </tr>
 
@@ -148,67 +140,26 @@
   </div>
   </div>
 
-  <div class="modal fade" id="editarNot" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal fade" id="removerNot" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Editar notificação</h5>
+          <h5 class="modal-title">Remover notificação</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <form action="" method="" id="editarNot">
-            <div class="form-group" id="idModalEditarNot">
-              <label>ID</label>
-              <input type="text" class="form-control" id="idNot">
-            </div>
-            <div class="form-group">
-              <label>Titulo</label>
-              <input type="text" class="form-control" name="editarTitulo" id="editarTitulo" placeholder="Titulo da postagem">
-            </div>
-            <div class="form-group">
-              <label>Patrocinador</label>
-              <select class="form-control" name="editarPatrocinador" id="editarPatrocinador">
-                <option selected disabled>Procurar patrocinador</option>
-                <option>Default</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label>Status</label>
-              <select class="form-control" name="editarStatus" id="editarStatus">
-                <option value="1" selected>Ativo</option>
-                <option value="0">Desativado</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="description">Descrição</label>
-              <textarea class="form-control" name="descriptionNot" id="descriptionNot"
-                placeholder="Insira uma descrição..." rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-block btn-modal">Salvar</button>
-            <button type="button" class="btn btn-block btn-secondary" data-dismiss="modal">Sair</button>
+          <form action="" method="">
+            <p>Deseja remover esta notificação?<p>
+                <div class="form-group">
+                  <label>ID</label>
+                  <input type="text" class="form-control" id="idRemoverPost"
+                    placeholder="Digite o ID da notificação que será removido!">
+                </div>
+                <button type="button" class="btn btn-block btn-modal">Remover</button>
+                <button type="button" class="btn btn-block btn-exit" data-dismiss="modal">Não</button>
           </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="removerAnimais" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Remover animais</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>Deseja remover este cadastro?<p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-block btn-modal">Sim</button>
-          <button type="button" class="btn btn-block btn-exit" data-dismiss="modal">Não</button>
         </div>
       </div>
     </div>
