--- a/postagens.html
+++ b/postagens.html
@@ -112,12 +112,10 @@
           <thead>
             <tr>
               <th scope="col">#ID</th>
-              <th class="resp-table" scope="col"></th>
               <th scope="col">Titulo</th>
               <th scope="col">Animal</th>
               <th scope="col">Status</th>
               <th class="resp-table" scope="col">Descrição</th>
-              <th scope="col"></th>
               <th scope="col"></th>
             </tr>
           </thead>
@@ -125,16 +123,10 @@
 
             <tr>
               <th scope="row">1</th>
-              <td class="resp-table">
-                <div class="avatar-list">
-                  <img src="./img/avatar.png" alt="Avatar" height="50px;">
-                </div>
-              </td>
               <td>Adote o cachorro surfista</td>
               <td>Thanos</td>
               <td>Ativo</td>
               <td class="resp-table">Thanos e um vira-lata da cor preta e porte médio, muito brincalhão...</td>
-              <td><i class="fas fa-edit" data-toggle="modal" data-target="#editarPost" title="Editar"></i></td>
               <td><i class="fas fa-trash-alt" data-toggle="modal" data-target="#removerPost" title="Remover"></i>
               </td>
             </tr>
@@ -147,73 +139,26 @@
   </div>
   </div>
 
-  <div class="modal fade" id="editarPost" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal fade" id="removerPost" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Editar post</h5>
+          <h5 class="modal-title">Remover post</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <form action="" method="" id="editarPost">
-            <div class="form-group" id="idModalEditarPost">
-              <label>ID</label>
-              <input type="text" class="form-control" id="idPost">
-            </div>
-            <div class="form-group">
-              <label>Titulo</label>
-              <input type="text" class="form-control" name="editarTitulo" id="editarTitulo" placeholder="Titulo da postagem">
-            </div>
-            <div class="form-group">
-              <label>Animal</label>
-              <select class="form-control" name="editarAnimal" id="editarAnimal">
-                <option selected disabled>Procurar animal</option>
-                <option>Default</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label>Finalidade da postagem</label>
-              <select class="form-control" name="editarFinalidade" id="editarFinalidade">
-                <option selected disabled>Adoção</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label>Status</label>
-              <select class="form-control" name="statusPost" id="statusPost">
-                <option value="1" selected>Ativo</option>
-                <option value="0">Desativado</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="description">Descrição</label>
-              <textarea class="form-control" name="descriptionPost" id="descriptionPost"
-                placeholder="Insira uma descrição..." rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-block btn-modal">Salvar</button>
-            <button type="button" class="btn btn-block btn-secondary" data-dismiss="modal">Sair</button>
+          <form action="" method="">
+            <p>Deseja remover este Post?<p>
+                <div class="form-group">
+                  <label>ID</label>
+                  <input type="text" class="form-control" id="idRemoverPost"
+                    placeholder="Digite o ID do post que será removido!">
+                </div>
+                <button type="button" class="btn btn-block btn-modal">Remover</button>
+                <button type="button" class="btn btn-block btn-exit" data-dismiss="modal">Não</button>
           </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="removerAnimais" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Remover animais</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>Deseja remover este cadastro?<p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-block btn-modal">Sim</button>
-          <button type="button" class="btn btn-block btn-exit" data-dismiss="modal">Não</button>
         </div>
       </div>
     </div>
@@ -228,7 +173,7 @@
   <script type="text/javascript" src="js/jquery.mask.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  
+
 
   <script>
     $(document).ready(function () {
